--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -29,6 +29,11 @@ jobs:
           echo "COMMIT_POSITION=$COMMIT_POSITION" >> $GITHUB_ENV
           echo "BUILD_NUMBER=$BUILD_NUMBER" >> $GITHUB_ENV
           echo "PR_LIST_TSV=$PR_LIST_TSV" >> $GITHUB_ENV
+      - name: Fetch remote tags
+        run: |
+          # Fetch remote tags instead of using `fetch-tags` option in `actions/checkout`
+          # see: https://github.com/actions/checkout/issues/1467
+          git fetch origin 'refs/tags/*:refs/tags/*'
       - name: Create release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
