--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           # Fetch remote tags instead of using `fetch-tags` option in `actions/checkout`
           # see: https://github.com/actions/checkout/issues/1467
-          git fetch origin 'refs/tags/*:refs/tags/*'
+          git fetch --force origin 'refs/tags/*:refs/tags/*'
       - name: Create release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
