Fix a broken link to patch file

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -61,7 +61,7 @@ jobs:
 
           ### Applied Patches
 
-          - [disable_audio_input_interface](${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/blob/${WEBRTC_VERSION}/patches/disable_audio_input_interface.patch) 
+          - [disable_audio_input_interface](${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/blob/${NEXT_RELEASE}/patches/disable_audio_input_interface.patch)
 
           ## Development
 
