--- a/.github/workflows/build-and-pr.yml
+++ b/.github/workflows/build-and-pr.yml
@@ -1,5 +1,16 @@
 name: WebRTC Build and Create Pull Request
 on: 
+  workflow_call:
+    inputs:
+      webrtc_version:
+        description: 'WebRTC Version'
+        required: true
+        type: string
+      build_number:
+        description: 'Build Number'
+        required: false
+        type: string
+        default: '0'
   workflow_dispatch:
     inputs:
       webrtc_version:
